tests/baselines/reference/topLevelLambda4.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
topLevelLambda4.ts(1,22): error TS2532: Object is possibly 'undefined'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== topLevelLambda4.ts (1 errors) ====
    export var x = () => this.window;
                         ~~~~
!!! error TS2532: Object is possibly 'undefined'.